--- a/_modules/copyxnat/xnat_backend/server_factory.html
+++ b/_modules/copyxnat/xnat_backend/server_factory.html
@@ -52,16 +52,17 @@
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">backend</span><span class="p">):</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_backend</span> <span class="o">=</span> <span class="n">backend</span>
 
-<div class="viewcode-block" id="ServerFactory.create"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.server_factory.html#copyxnat.xnat_backend.server_factory.ServerFactory.create">[docs]</a>    <span class="k">def</span> <span class="nf">create</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">params</span><span class="p">):</span>
+<div class="viewcode-block" id="ServerFactory.create"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.server_factory.html#copyxnat.xnat_backend.server_factory.ServerFactory.create">[docs]</a>    <span class="k">def</span> <span class="nf">create</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">params</span><span class="p">,</span> <span class="n">read_only</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Create an XNAT server backend object</span>
 <span class="sd">        @param params: XnatServerParams for the XNAT server</span>
+<span class="sd">        @param read_only: if True then the server may prevent write requests</span>
 <span class="sd">        @return: a server backend for communicating with XnatInterface</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">_backend</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span> <span class="o">==</span> <span class="s1">&#39;pyxnat&#39;</span><span class="p">:</span>
             <span class="k">return</span> <span class="n">PyXnatServer</span><span class="p">(</span><span class="n">params</span><span class="o">=</span><span class="n">params</span><span class="p">)</span>
         <span class="k">elif</span> <span class="bp">self</span><span class="o">.</span><span class="n">_backend</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span> <span class="o">==</span> <span class="s1">&#39;simplexnat&#39;</span><span class="p">:</span>
-            <span class="k">return</span> <span class="n">SimpleXnatServer</span><span class="p">(</span><span class="n">params</span><span class="o">=</span><span class="n">params</span><span class="p">)</span>
+            <span class="k">return</span> <span class="n">SimpleXnatServer</span><span class="p">(</span><span class="n">params</span><span class="o">=</span><span class="n">params</span><span class="p">,</span> <span class="n">read_only</span><span class="o">=</span><span class="n">read_only</span><span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s1">&#39;Unknown backend </span><span class="si">{}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_backend</span><span class="p">))</span></div></div>
 </pre></div>
