deploy: a630dcf60e8f50f36422175bc33153df2caf0118

--- a/_modules/copyxnat/utils/network_utils.html
+++ b/_modules/copyxnat/utils/network_utils.html
@@ -45,7 +45,7 @@
 
 
 <div class="viewcode-block" id="get_host"><a class="viewcode-back" href="../../../copyxnat.utils.network_utils.html#copyxnat.utils.network_utils.get_host">[docs]</a><span class="k">def</span> <span class="nf">get_host</span><span class="p">(</span><span class="n">url</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Strinp the host prefix&quot;&quot;&quot;</span>
+    <span class="sd">&quot;&quot;&quot;Strip the host prefix&quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="n">url</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s1">&#39;https://&#39;</span><span class="p">,</span> <span class="s1">&#39;&#39;</span><span class="p">)</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s1">&#39;http://&#39;</span><span class="p">,</span> <span class="s1">&#39;&#39;</span><span class="p">)</span></div>
 </pre></div>
 
