--- a/genindex.html
+++ b/genindex.html
@@ -340,6 +340,13 @@
 </li>
       </ul></li>
       <li>
+    copyxnat.utils.error_utils
+
+      <ul>
+        <li><a href="copyxnat.utils.error_utils.html#module-copyxnat.utils.error_utils">module</a>
+</li>
+      </ul></li>
+      <li>
     copyxnat.utils.network_utils
 
       <ul>
@@ -947,6 +954,8 @@
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.make_project_names_unique">make_project_names_unique() (copyxnat.xnat.xml_cleaner.XmlCleaner method)</a>
 </li>
+      <li><a href="copyxnat.utils.error_utils.html#copyxnat.utils.error_utils.message_from_exception">message_from_exception() (in module copyxnat.utils.error_utils)</a>
+</li>
       <li><a href="copyxnat.config.app_settings.html#copyxnat.config.app_settings.TransferMode.META">META (copyxnat.config.app_settings.TransferMode attribute)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.xnat_rest_client.html#copyxnat.xnat_backend.xnat_rest_client.XnatRestClient.meta">meta() (copyxnat.xnat_backend.xnat_rest_client.XnatRestClient method)</a>
@@ -1044,6 +1053,8 @@
         <li><a href="copyxnat.ui.command_line.html#module-copyxnat.ui.command_line">copyxnat.ui.command_line</a>
 </li>
         <li><a href="copyxnat.utils.html#module-copyxnat.utils">copyxnat.utils</a>
+</li>
+        <li><a href="copyxnat.utils.error_utils.html#module-copyxnat.utils.error_utils">copyxnat.utils.error_utils</a>
 </li>
         <li><a href="copyxnat.utils.network_utils.html#module-copyxnat.utils.network_utils">copyxnat.utils.network_utils</a>
 </li>
@@ -1670,6 +1681,8 @@
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFileContainerItem.user_visible_info">(copyxnat.xnat.xnat_interface.XnatFileContainerItem method)</a>
 </li>
       </ul></li>
+      <li><a href="copyxnat.utils.error_utils.html#copyxnat.utils.error_utils.UserError">UserError</a>
+</li>
       <li><a href="copyxnat.xnat_backend.utis.html#copyxnat.xnat_backend.utis.Utils">Utils (class in copyxnat.xnat_backend.utis)</a>
 </li>
   </ul></td>
