--- a/_modules/copyxnat/ui/command_line.html
+++ b/_modules/copyxnat/ui/command_line.html
@@ -51,23 +51,34 @@
 <span class="kn">from</span> <span class="nn">copyxnat.commands.find_commands</span> <span class="kn">import</span> <span class="n">find_command</span>
 <span class="kn">from</span> <span class="nn">copyxnat.commands</span> <span class="kn">import</span> <span class="n">find_commands</span>
 <span class="kn">from</span> <span class="nn">copyxnat.api.run_command</span> <span class="kn">import</span> <span class="n">run_command</span>
+<span class="kn">from</span> <span class="nn">copyxnat.pyreporter.console</span> <span class="kn">import</span> <span class="n">AnsiCodes</span>
+<span class="kn">from</span> <span class="nn">copyxnat.utils.error_utils</span> <span class="kn">import</span> <span class="n">message_from_exception</span><span class="p">,</span> <span class="n">UserError</span>
 <span class="kn">from</span> <span class="nn">copyxnat.utils.versioning</span> <span class="kn">import</span> <span class="n">get_version_string</span>
 <span class="kn">from</span> <span class="nn">copyxnat.config.server_params</span> <span class="kn">import</span> <span class="n">XnatServerParams</span>
 <span class="kn">from</span> <span class="nn">copyxnat.config.app_settings</span> <span class="kn">import</span> <span class="n">AppSettings</span>
 
 
 <div class="viewcode-block" id="run_command_line"><a class="viewcode-back" href="../../../copyxnat.ui.command_line.html#copyxnat.ui.command_line.run_command_line">[docs]</a><span class="k">def</span> <span class="nf">run_command_line</span><span class="p">(</span><span class="n">args</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Run the copyxnat with the specified command-line arguments&quot;&quot;&quot;</span>
+    <span class="sd">&quot;&quot;&quot;Run the copyxnat with the specified command-line arguments</span>
+
+<span class="sd">    :returns: status code 0=success, 1=failure</span>
+<span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="n">command</span><span class="p">,</span> <span class="n">src_params</span><span class="p">,</span> <span class="n">dst_params</span><span class="p">,</span> <span class="n">project_list</span><span class="p">,</span> <span class="n">app_settings</span> <span class="o">=</span> \
         <span class="n">_parse_command_line</span><span class="p">(</span><span class="n">args</span><span class="p">)</span>
 
-    <span class="k">return</span> <span class="n">run_command</span><span class="p">(</span><span class="n">command</span><span class="o">=</span><span class="n">command</span><span class="p">,</span>
-                       <span class="n">src_params</span><span class="o">=</span><span class="n">src_params</span><span class="p">,</span>
-                       <span class="n">dst_params</span><span class="o">=</span><span class="n">dst_params</span><span class="p">,</span>
-                       <span class="n">project_filter</span><span class="o">=</span><span class="n">project_list</span><span class="p">,</span>
-                       <span class="n">app_settings</span><span class="o">=</span><span class="n">app_settings</span>
-                       <span class="p">)</span></div>
+    <span class="k">try</span><span class="p">:</span>
+        <span class="n">run_command</span><span class="p">(</span><span class="n">command</span><span class="o">=</span><span class="n">command</span><span class="p">,</span>
+                    <span class="n">src_params</span><span class="o">=</span><span class="n">src_params</span><span class="p">,</span>
+                    <span class="n">dst_params</span><span class="o">=</span><span class="n">dst_params</span><span class="p">,</span>
+                    <span class="n">project_filter</span><span class="o">=</span><span class="n">project_list</span><span class="p">,</span>
+                    <span class="n">app_settings</span><span class="o">=</span><span class="n">app_settings</span>
+                    <span class="p">)</span>
+        <span class="k">return</span> <span class="mi">0</span>
+
+    <span class="k">except</span> <span class="ne">Exception</span> <span class="k">as</span> <span class="n">exc</span><span class="p">:</span>  <span class="c1"># pylint: disable=broad-except</span>
+        <span class="n">_show_exception_to_user</span><span class="p">(</span><span class="n">exc</span><span class="p">)</span>
+        <span class="k">return</span> <span class="mi">1</span></div>
 
 
 <div class="viewcode-block" id="run_entry_point"><a class="viewcode-back" href="../../../copyxnat.ui.command_line.html#copyxnat.ui.command_line.run_entry_point">[docs]</a><span class="k">def</span> <span class="nf">run_entry_point</span><span class="p">():</span>
@@ -77,18 +88,20 @@
 <span class="sd">    :returns: status code 0=success, 1=failure</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
-    <span class="k">try</span><span class="p">:</span>
-        <span class="n">run_command_line</span><span class="p">(</span><span class="n">sys</span><span class="o">.</span><span class="n">argv</span><span class="p">[</span><span class="mi">1</span><span class="p">:])</span>
-        <span class="k">return</span> <span class="mi">0</span>
+    <span class="k">return</span> <span class="n">run_command_line</span><span class="p">(</span><span class="n">sys</span><span class="o">.</span><span class="n">argv</span><span class="p">[</span><span class="mi">1</span><span class="p">:])</span></div>
 
-    <span class="k">except</span> <span class="ne">Exception</span> <span class="k">as</span> <span class="n">exc</span><span class="p">:</span>  <span class="c1"># pylint: disable=broad-except</span>
-        <span class="n">six</span><span class="o">.</span><span class="n">print_</span><span class="p">(</span><span class="s2">&quot;CopyXnat failed with error </span><span class="si">{}</span><span class="s2">&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="nb">str</span><span class="p">(</span><span class="n">exc</span><span class="p">)),</span>
-                   <span class="n">file</span><span class="o">=</span><span class="n">sys</span><span class="o">.</span><span class="n">stderr</span><span class="p">)</span>
+
+<span class="k">def</span> <span class="nf">_show_exception_to_user</span><span class="p">(</span><span class="n">exc</span><span class="p">):</span>
+    <span class="n">message</span> <span class="o">=</span> <span class="n">AnsiCodes</span><span class="o">.</span><span class="n">RED</span> <span class="o">+</span> <span class="s2">&quot;CopyXnat could not complete due to the &quot;</span> \
+                              <span class="s2">&quot;following error: </span><span class="si">{}</span><span class="s2">&quot;</span> <span class="o">+</span> <span class="n">AnsiCodes</span><span class="o">.</span><span class="n">END</span>
+    <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">exc</span><span class="p">,</span> <span class="n">UserError</span><span class="p">):</span>
+        <span class="n">six</span><span class="o">.</span><span class="n">print_</span><span class="p">(</span><span class="n">message</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">exc</span><span class="o">.</span><span class="n">user_friendly_message</span><span class="p">),</span> <span class="n">file</span><span class="o">=</span><span class="n">sys</span><span class="o">.</span><span class="n">stderr</span><span class="p">)</span>
+    <span class="k">else</span><span class="p">:</span>
+        <span class="n">six</span><span class="o">.</span><span class="n">print_</span><span class="p">(</span><span class="n">message</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">message_from_exception</span><span class="p">(</span><span class="n">exc</span><span class="p">)),</span> <span class="n">file</span><span class="o">=</span><span class="n">sys</span><span class="o">.</span><span class="n">stderr</span><span class="p">)</span>
         <span class="n">six</span><span class="o">.</span><span class="n">print_</span><span class="p">(</span><span class="s2">&quot;If you think this may be a bug, please create an issue at &quot;</span>
-              <span class="s2">&quot;https://github.com/tomdoel/copyxnat/issues and include &quot;</span>
-              <span class="s2">&quot;the following error details:&quot;</span><span class="p">,</span> <span class="n">file</span><span class="o">=</span><span class="n">sys</span><span class="o">.</span><span class="n">stderr</span><span class="p">)</span>
+                   <span class="s2">&quot;https://github.com/tomdoel/copyxnat/issues and include &quot;</span>
+                   <span class="s2">&quot;the following error details:&quot;</span><span class="p">,</span> <span class="n">file</span><span class="o">=</span><span class="n">sys</span><span class="o">.</span><span class="n">stderr</span><span class="p">)</span>
         <span class="n">traceback</span><span class="o">.</span><span class="n">print_exc</span><span class="p">()</span>
-        <span class="k">return</span> <span class="mi">1</span></div>
 
 
 <span class="k">def</span> <span class="nf">_parse_command_line</span><span class="p">(</span><span class="n">args</span><span class="p">):</span>
@@ -227,7 +240,6 @@
                                     <span class="n">help</span><span class="o">=</span><span class="s2">&quot;Ask the monitoring service to clear&quot;</span>
                                          <span class="s2">&quot;Java caches after each session upload&quot;</span>
                                     <span class="p">)</span>
-
 
     <span class="n">args</span> <span class="o">=</span> <span class="n">parser</span><span class="o">.</span><span class="n">parse_args</span><span class="p">(</span><span class="n">args</span><span class="p">)</span>
 
